--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,9 @@
-[pep8]
+[pycodestyle]
 max-line-length = 160
 
+[flake8]
+max-line-length = 160
+
+[bandit]
+exclude = test_svndumpfilter.py
+skips = B101,B404
