--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           source venv/bin/activate
-          pytest
+          pytest test
           
       - name: Run Bandit   
         if: $${{ inputs.ENABLE_BANDIT }}
